[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact_searcher"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "loguru~=0.7.3",
    "pydantic~=2.10.6",
    "requests~=2.32.3",
    "deepdiff~=8.0.1",
    "PyYAML~=6.0.2",
    "responses~=0.25.7",
    "aiohttp~=3.11.18",
    "asyncio~=3.4.3",
    "aioresponses~=0.7.8",
    "pytest-asyncio~=1.0.0",
    "pytest-aiohttp~=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.0"
]

[tool.setuptools.packages.find]
exclude = ["docs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
