[metadata]
name = integration_loader
version = 0.0.1
description = Provide integration_loader
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8

[options.package_data]
integration_loader =
    py.typed

[mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
strict_equality = true
enable_error_code = truthy-function
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
